New index.  Start of actual website

--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hannah's Homestead</title>
-</head>
-<body>
-	<h1>Hey I'm a big heading</h1>
-	<p>Hey I'm a <b>paragraph</b>, cool huh</p>
-	<a href="https://google.com" target="_blank" title="Lets go to Google">Google Link</a>
-	<div>
-		<img src="img/Guinea_pigs_cardboard_crop.jpg">
-    </div>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Hannah's Homestead</title>
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
+	</head>
+	<body>
+		<!-- Header element-->
+		<header>
+			<img src="img/Guinea_pigs_cardboard_crop.jpg">
+			<h1>Hannah's Homestead</h1>
+
+		</header>
+
+		<!-- Main Element -->
+		<main>
+			<h2>About Hannah</h2>
+			<p>I live in Western Australia on 1 acre of land.  I take care of Guinea Pigs, Rabbits and Chickens.  This website will document all the animals I care for including photo's and family trees.</p>
+			<img src="img/guinea_eating_carrot">
+		</main>
+
+	</body>
 </html>
