--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Hannah's Homestead</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		<link rel="icon" href="img/Guinea_pigs_cardboard_crop.jpg">
 	</head>
 	<body>
 		<!-- Header element-->
@@ -18,8 +19,23 @@
 		<main>
 			<h2>About Hannah</h2>
 			<p>I live in Western Australia on 1 acre of land.  I take care of Guinea Pigs, Rabbits and Chickens.  This website will document all the animals I care for including photo's and family trees.</p>
-			<img src="img/guinea_eating_carrot">
+			<img src="img/guinea_eating_carrot.jpg">
+			<p>Current Guinea Pigs</p>
+				<ol>
+					<li>Fiona</li>
+					<li>Mini-Shrek</li>
+					<li>Jimmy</li>
+					<li>Bino</li>
+					<li>Coco</li>
+					<li>Yasmin</li>
+					<li>Barbara</li>
+					<li>babs1</li>
+				</ol>
 		</main>
+
+		<footer>
+			<p>Hannah's Homestead &copy; Hannah C.</p>
+		</footer>
 
 	</body>
 </html>
