--- a/my_pets.html
+++ b/my_pets.html
@@ -18,7 +18,7 @@
             <a href="about_me.html"><button>About me</button></a>
             <a href="my_pets.html"><button>My Pets</button></a>
             <a href="surrounding_area.html"><button>Surrounding Area</button></a>
-            <a href="contacts.html"><button>Contacts</button></a>
+            <a href="contact.html"><button>Contacts</button></a>
         </div>
     </nav>
 
