Updated photos and index page

--- a/surrounding_area.html
+++ b/surrounding_area.html
@@ -31,17 +31,17 @@
         <div class="right-column">
             <div class="row">
                 <div class="column">
-                    <img src="img/mundaring_sign.jpg" alt="Image 1">
+                    <img src="img/surrounds/mundaring_sign.jpg" alt="Image 1">
                 </div>
             </div>
             <div class="row">
                 <div class="column">
-                    <img src="img/mundaring_kangaroos.jpg" alt="Image 2">
+                    <img src="img/surrounds/mundaring_kangaroos.jpg" alt="Image 2">
                 </div>
             </div>
             <div class="row">
                 <div class="column">
-                    <img src="img/mundaring_weir.jpg" alt="Image 3">
+                    <img src="img/surrounds/mundaring_weir.jpg" alt="Image 3">
                 </div>
             </div>
         </div>
