--- a/index.html
+++ b/index.html
@@ -21,46 +21,119 @@
     </nav>
 
     <div class="container">
+        <h2>Meet the Dad, Mini-Shrek</h2>
         <div class="row">
-            <div class="column">
-                <div class="label">John</div>
-                <img src="img/total_beige_and_white.jpg" alt="John">   
+            <div class="column light-blue-border">
+                <img src="img/mini_shrek/mini_shrek_1.jpg" alt="Mini-Shrek">   
             </div>
-            <div class="column">
-                <div class="label">Paul</div>
-                <img src="img/beige_butt.jpg" alt="Paul">
+            <div class="column light-blue-border">
+                <img src="img/mini_shrek/mini_shrek_4.jpg" alt="Mini-Shrek">
             </div>
-            <div class="column">
-                <div class="label">George</div>
-                <img src="img/barbara_yasmin_babies_1.jpg" alt="George">
+            <div class="column light-blue-border">
+                <img src="img/mini_shrek/mini_shrek_5.jpg" alt="Mini-Shrek">
+            </div>
+        </div>
+        <h2>Yasmin - Mother to Barbara and Coco, now mother to these four babies below!</h2>
+        <div class="row">
+            <div class="column pink-border">
+                <img src="img/yasmin/yasmin.jpg" alt="Yasmin">   
+            </div>
+            <div class="column pink-border">
+                <img src="img/yasmin/yasmin.jpg" alt="Yasmin">
+            </div>
+            <div class="column pink-border">
+                <img src="img/yasmin/yasmin.jpg" alt="Yasmin">
+            </div>
+        </div>
+        <h2>Yasmin's babies - Born 2nd November 2023</h2>
+        <div class="row">
+            <div class="column light-blue-border">
+                <img src="img/yasmin/baby_1.jpg" alt="baby_1">      
+            </div>
+            <div class="column pink-border">
+                <img src="img/yasmin/baby_2.jpg" alt="baby_2">
+            </div>
+            <div class="column light-blue-border">
+                <img src="img/yasmin/baby_3.jpg" alt="baby_3">
             </div>
         </div>
         <div class="row">
-            <div class="column">
-                <div class="label">Ringo</div>
-                <img src="img/barbaras_beige_and_white.jpg" alt="Ringo">
+            <div class="column light-blue-border">
+                <img src="img/yasmin/baby_4.jpg" alt="baby_4">
             </div>
-            <div class="column">
-                <div class="label">James</div>
-                <img src="img/barbaras_beige_and_white_front_closeup.jpg" alt="James">  
+        </div>
+        <h2>Barbara - First time Mum to four babies</h2>
+        <div class="row">
+            <div class="column pink-border">
+                <img src="img/barbara/barbara.jpg" alt="Yasmin">   
             </div>
-            <div class="column">
-                <div class="label">Matthew</div>
-                <img src="img/barbaras_beige_and_white_plus_black_and_white.jpg" alt="Matthew">
+            <div class="column pink-border">
+                <img src="img/barbara/barbara.jpg" alt="Yasmin">
+            </div>
+            <div class="column pink-border">
+                <img src="img/barbara/barbara.jpg" alt="Yasmin">
+            </div>
+        </div>        
+        <h2>Meet Barbara's babies - Born 2nd November 2023</h2>
+        <div class="row">
+            <div class="column light-blue-border">
+                <img src="img/barbara/ws_baby_1.jpg" alt="baby_1">      
+            </div>
+            <div class="column pink-border">
+                <img src="img/barbara/ws_baby_2.jpg" alt="baby_2">
+            </div>
+            <div class="column light-blue-border">
+                <img src="img/barbara/ws_baby_3.jpg" alt="baby_3">
             </div>
         </div>
         <div class="row">
-            <div class="column">
-                <div class="label">Hannah</div>
-                <img src="img/beige_white.jpg" alt="Hannah">               
+            <div class="column light-blue-border">
+                <img src="img/barbara/ws_baby_4.jpg" alt="baby_4">
             </div>
-            <div class="column">
-                <div class="label">Leah</div>
-                <img src="img/beige_white_brown.jpg" alt="Leah">               
+        </div>
+        <h2>Coco - First time Mum to two babies</h2>
+        <div class="row">
+            <div class="column pink-border">
+                <img src="img/coco/coco.jpg" alt="Yasmin">   
             </div>
-            <div class="column">
-                <div class="label">Zac</div>
-                <img src="img/black_white.jpg" alt="Zac">
+            <div class="column pink-border">
+                <img src="img/coco/coco.jpg" alt="Yasmin">
+            </div>
+            <div class="column pink-border">
+                <img src="img/coco/coco.jpg" alt="Yasmin">
+            </div>
+        </div>        
+        <h2>Meet Coco's babies - Born 5th November 2023</h2>
+        <div class="row">
+            <div class="column light-blue-border">
+                <img src="img/coco/ws_baby_1.jpg" alt="baby_1">      
+            </div>
+            <div class="column pink-border">
+                <img src="img/coco/ws_baby_2.jpg" alt="baby_2">
+            </div>
+        </div>
+        <h2>Fiona - Mother of Yasmin</h2>
+        <div class="row">
+            <div class="column pink-border">
+                <img src="img/fiona/fiona.jpg" alt="Yasmin">   
+            </div>
+            <div class="column pink-border">
+                <img src="img/fiona/fiona.jpg" alt="Yasmin">
+            </div>
+            <div class="column pink-border">
+                <img src="img/fiona/fiona.jpg" alt="Yasmin">
+            </div>
+        </div>        
+        <h2>Meet Fiona's babies - Born 13th November 2023</h2>
+        <div class="row">
+            <div class="column light-blue-border">
+                <img src="img/coco/ws_baby_1.jpg" alt="baby_1">      
+            </div>
+            <div class="column pink-border">
+                <img src="img/coco/ws_baby_2.jpg" alt="baby_2">
+            </div>
+            <div class="column pink-border">
+                <img src="img/coco/ws_baby_2.jpg" alt="baby_2">
             </div>
         </div>
     </div>
