--- a/index.html
+++ b/index.html
@@ -24,119 +24,144 @@
         <h2>Meet the Dad, Mini-Shrek</h2>
         <div class="row">
             <div class="column light-blue-border">
-                <img src="img/mini_shrek/mini_shrek_1.jpg" alt="Mini-Shrek">   
+                <img class="enlargeable" src="img/mini_shrek/mini_shrek_1.jpg" alt="Mini-Shrek">   
             </div>
             <div class="column light-blue-border">
-                <img src="img/mini_shrek/mini_shrek_4.jpg" alt="Mini-Shrek">
+                <img class="enlargeable" src="img/mini_shrek/mini_shrek_4.jpg" alt="Mini-Shrek">
             </div>
             <div class="column light-blue-border">
-                <img src="img/mini_shrek/mini_shrek_5.jpg" alt="Mini-Shrek">
+                <img class="enlargeable" src="img/mini_shrek/mini_shrek_5.jpg" alt="Mini-Shrek">
             </div>
         </div>
         <h2>Yasmin - Mother to Barbara and Coco, now mother to these four babies below!</h2>
         <div class="row">
             <div class="column pink-border">
-                <img src="img/yasmin/yasmin.jpg" alt="Yasmin">   
+                <img class="enlargeable" src="img/yasmin/yasmin.jpg" alt="Yasmin">   
             </div>
             <div class="column pink-border">
-                <img src="img/yasmin/yasmin.jpg" alt="Yasmin">
+                <img class="enlargeable" src="img/yasmin/yasmin.jpg" alt="Yasmin">
             </div>
             <div class="column pink-border">
-                <img src="img/yasmin/yasmin.jpg" alt="Yasmin">
+                <img class="enlargeable" src="img/yasmin/yasmin.jpg" alt="Yasmin">
             </div>
         </div>
         <h2>Yasmin's babies - Born 2nd November 2023</h2>
         <div class="row">
             <div class="column light-blue-border">
-                <img src="img/yasmin/baby_1.jpg" alt="baby_1">      
+                <img class="enlargeable" src="img/yasmin/baby_1.jpg" alt="baby_1">      
             </div>
             <div class="column pink-border">
-                <img src="img/yasmin/baby_2.jpg" alt="baby_2">
+                <img class="enlargeable" src="img/yasmin/baby_2.jpg" alt="baby_2">
             </div>
             <div class="column light-blue-border">
-                <img src="img/yasmin/baby_3.jpg" alt="baby_3">
+                <img class="enlargeable" src="img/yasmin/baby_3.jpg" alt="baby_3">
             </div>
         </div>
         <div class="row">
             <div class="column light-blue-border">
-                <img src="img/yasmin/baby_4.jpg" alt="baby_4">
+                <img class="enlargeable" src="img/yasmin/baby_4.jpg" alt="baby_4">
             </div>
         </div>
         <h2>Barbara - First time Mum to four babies</h2>
         <div class="row">
             <div class="column pink-border">
-                <img src="img/barbara/barbara.jpg" alt="Yasmin">   
+                <img class="enlargeable" src="img/barbara/barbara.jpg" alt="Yasmin">   
             </div>
             <div class="column pink-border">
-                <img src="img/barbara/barbara.jpg" alt="Yasmin">
+                <img class="enlargeable" src="img/barbara/barbara.jpg" alt="Yasmin">
             </div>
             <div class="column pink-border">
-                <img src="img/barbara/barbara.jpg" alt="Yasmin">
+                <img class="enlargeable" src="img/barbara/barbara.jpg" alt="Yasmin">
             </div>
         </div>        
         <h2>Meet Barbara's babies - Born 2nd November 2023</h2>
         <div class="row">
             <div class="column light-blue-border">
-                <img src="img/barbara/ws_baby_1.jpg" alt="baby_1">      
+                <img class="enlargeable" src="img/barbara/ws_baby_1.jpg" alt="baby_1">      
             </div>
             <div class="column pink-border">
-                <img src="img/barbara/ws_baby_2.jpg" alt="baby_2">
+                <img class="enlargeable" src="img/barbara/ws_baby_2.jpg" alt="baby_2">
             </div>
             <div class="column light-blue-border">
-                <img src="img/barbara/ws_baby_3.jpg" alt="baby_3">
+                <img class="enlargeable" src="img/barbara/ws_baby_3.jpg" alt="baby_3">
             </div>
         </div>
         <div class="row">
             <div class="column light-blue-border">
-                <img src="img/barbara/ws_baby_4.jpg" alt="baby_4">
+                <img class="enlargeable" src="img/barbara/ws_baby_4.jpg" alt="baby_4">
             </div>
         </div>
         <h2>Coco - First time Mum to two babies</h2>
         <div class="row">
             <div class="column pink-border">
-                <img src="img/coco/coco.jpg" alt="Yasmin">   
+                <img class="enlargeable" src="img/coco/coco.jpg" alt="Yasmin">   
             </div>
             <div class="column pink-border">
-                <img src="img/coco/coco.jpg" alt="Yasmin">
+                <img class="enlargeable" src="img/coco/coco.jpg" alt="Yasmin">
             </div>
             <div class="column pink-border">
-                <img src="img/coco/coco.jpg" alt="Yasmin">
+                <img class="enlargeable" src="img/coco/coco.jpg" alt="Yasmin">
             </div>
         </div>        
         <h2>Meet Coco's babies - Born 5th November 2023</h2>
         <div class="row">
             <div class="column light-blue-border">
-                <img src="img/coco/ws_baby_1.jpg" alt="baby_1">      
+                <img class="enlargeable" src="img/coco/ws_baby_1.jpg" alt="baby_1">      
             </div>
             <div class="column pink-border">
-                <img src="img/coco/ws_baby_2.jpg" alt="baby_2">
+                <img class="enlargeable" src="img/coco/ws_baby_2.jpg" alt="baby_2">
             </div>
         </div>
         <h2>Fiona - Mother of Yasmin</h2>
         <div class="row">
             <div class="column pink-border">
-                <img src="img/fiona/fiona.jpg" alt="Yasmin">   
+                <img class="enlargeable" src="img/fiona/fiona.jpg" alt="Yasmin">   
             </div>
             <div class="column pink-border">
-                <img src="img/fiona/fiona.jpg" alt="Yasmin">
+                <img class="enlargeable" src="img/fiona/fiona.jpg" alt="Yasmin">
             </div>
             <div class="column pink-border">
-                <img src="img/fiona/fiona.jpg" alt="Yasmin">
+                <img class="enlargeable" src="img/fiona/fiona.jpg" alt="Yasmin">
             </div>
         </div>        
         <h2>Meet Fiona's babies - Born 13th November 2023</h2>
         <div class="row">
             <div class="column light-blue-border">
-                <img src="img/coco/ws_baby_1.jpg" alt="baby_1">      
+                <img class="enlargeable" src="img/fiona/baby_1.jpg" alt="baby_1">      
             </div>
             <div class="column pink-border">
-                <img src="img/coco/ws_baby_2.jpg" alt="baby_2">
+                <img class="enlargeable" src="img/fiona/baby_2.jpg" alt="baby_2">
             </div>
             <div class="column pink-border">
-                <img src="img/coco/ws_baby_2.jpg" alt="baby_2">
+                <img class="enlargeable" src="img/fiona/baby_3.jpg" alt="baby_3">
             </div>
         </div>
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var enlargeableImages = document.querySelectorAll('.enlargeable');
+
+            enlargeableImages.forEach(function(img) {
+                img.addEventListener('click', function() {
+                    var enlargedImg = document.createElement('img');
+                    enlargedImg.src = img.src;
+                    enlargedImg.classList.add('enlarged');
+
+                    // Append the enlarged image to the body
+                    document.body.appendChild(enlargedImg);
+
+                    // Hide the clicked image
+                    img.classList.add('hidden');
+
+                    // Close the enlarged image when clicked
+                    enlargedImg.addEventListener('click', function() {
+                        enlargedImg.remove();
+                        img.classList.remove('hidden');
+                    });
+                });
+            });
+        });
+    </script>    
 
     <footer>
         <p>&copy; 2023 Hannah C.</p>
