--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
         </div>
     </div>
-    <script>
+    <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', function() {
             var enlargeableImages = document.querySelectorAll('.enlargeable');
 
@@ -146,7 +146,7 @@
                     var enlargedImg = document.createElement('img');
                     enlargedImg.src = img.src;
                     enlargedImg.classList.add('enlarged');
-
+                    
                     // Append the enlarged image to the body
                     document.body.appendChild(enlargedImg);
 
@@ -161,7 +161,7 @@
                 });
             });
         });
-    </script>    
+    </script> 
 
     <footer>
         <p>&copy; 2023 Hannah C.</p>
