--- a/my_pets.html
+++ b/my_pets.html
@@ -33,8 +33,14 @@
                 <div class="column">
                     <img src="img/other_pets/chicken_1.jpg" alt="Image 1">
                 </div>
+                <div class="column">
+                    <img src="img/other_pets/chicken_1.jpg" alt="Image 1">
+                </div>
             </div>
             <div class="row">
+                <div class="column">
+                    <img src="img/other_pets/two_chickens.jpg" alt="Image 2">
+                </div>
                 <div class="column">
                     <img src="img/other_pets/two_chickens.jpg" alt="Image 2">
                 </div>
@@ -42,6 +48,9 @@
             <div class="row">
                 <div class="column">
                     <img src="img/other_pets/zel_jesseblack_penelopespeck.jpg" alt="Image 3">
+                </div>
+                <div class="column">
+                    <img src="img/other_pets/two_chickens.jpg" alt="Image 2">
                 </div>
             </div>
         </div>
