--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
         </div>        
         <h2>Meet Coco's babies - Born 5th November 2023</h2>
         <div class="row">
-            <div class="column light-blue-border">
-                <img class="enlargeable" src="img/coco/ws_baby_1.jpg" alt="baby_1">      
+            <div class="column pink-border">
+                <img class="enlargeable" src="img/coco/ws_baby_1.jpg" alt="baby_1"><!-- This is a girl -->      
             </div>
             <div class="column pink-border">
-                <img class="enlargeable" src="img/coco/ws_baby_2.jpg" alt="baby_2">
+                <img class="enlargeable" src="img/coco/ws_baby_2.jpg" alt="baby_2"><!-- This is a girl -->
             </div>
         </div>
         <h2>Fiona - Mother of Yasmin</h2>
@@ -126,14 +126,14 @@
         </div>        
         <h2>Meet Fiona's babies - Born 13th November 2023</h2>
         <div class="row">
-            <div class="column light-blue-border">
-                <img class="enlargeable" src="img/fiona/baby_1.jpg" alt="baby_1">      
+            <div class="column pink-border">
+                <img class="enlargeable" src="img/fiona/baby_1.jpg" alt="baby_1"><!-- This is a girl -->      
             </div>
             <div class="column pink-border">
-                <img class="enlargeable" src="img/fiona/baby_2.jpg" alt="baby_2">
+                <img class="enlargeable" src="img/fiona/baby_2.jpg" alt="baby_2"><!-- This is a girl -->
             </div>
             <div class="column pink-border">
-                <img class="enlargeable" src="img/fiona/baby_3.jpg" alt="baby_3">
+                <img class="enlargeable" src="img/fiona/baby_3.jpg" alt="baby_3"><!-- This is a girl -->
             </div>
         </div>
     </div>
